_sass/_base.scss
$purple: #a24dce;
$red: #c84267;
$orange: #d0804d;
$green: #78bc4e;
$blue: #3489c4;
$theme-primary: #933a55;
$theme-dark: #933a55;   
* {
  box-sizing: border-box;
}
html,
body {
    height: 100%;
    width: 100%;
}

body {
    font-size: 13px;
}

hr {
    border-color: $theme-primary;
    border-width: 3px;
    max-width: 50px;
}

hr.light {
    border-color: white;
}

a {
    @include transition-all;
    color: $blue;
    font-weight: bold;
    &:hover,
    &:focus {
        color: darken($blue, 10%);
        text-decoration: underline;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    @include blenda;
    margin:30px 0;
}

h2 {
	font-size: 35px;
}

p {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
}

.bg-primary {
    background-color: $theme-primary;
}

.bg-dark {
    background-color: $theme-dark;
    color: white;
}
.multi-poly {
    padding-top: 150px;
  background: url(/static/images/multi-bg.jpg);
  text-shadow: 1px 1px 3px #565656;
  background-size: cover;
  background-attachment: fixed;
  background-position: center center;
  color: #fff;
  @media only screen 
  and (min-device-width : 414px) 
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}
.red-poly {
  background: url(/static/images/red-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #c84267;
  color: #fff;
}

.green-poly {
  background: url(/static/images/green-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #78bc4e;
  color: #fff;
}

.blue-poly {
  background: url(/static/images/blue-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #3489c4;
  color: #fff;
}

.purple-poly {
  background: url(/static/images/purple-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #a24dce;
  color: #fff;
}

.text-faded {
    color: rgba(white, .7);
}

aside {
    padding: 50px 0;
}

.no-padding {
    padding: 0;
}

// Navigation

.navbar-default {
    background-color: white;
    color: #000;
        .navbar-toggle {
	    top:30px;
	    right:10px;
    }
    .navbar-header {
        height: 115px;
        .navbar-brand {
            height: auto;
            img {
                width: 85px;
            }
        }
    }
    .nav {
        margin-top: 40px;
        > li {
            > a,
            > a:focus {
                font-size: 15px;
                color: #000;
                text-transform: uppercase;
                font-weight: bold;
            }
            > a:hover {
                text-decoration: underline;
            }
        }
    }
    #presented {
    	width: 160px;
		float: left;
    	margin: 30px 10px;
    	img {
			width: 100%;
			}
	}
}

.navbar-default.navbar-shrink {
	height:80px;
	.navbar-toggle {
	    top:15px;
	    right:5px;
    }

	.navbar-header {
        height: 75px;
        .navbar-brand {
            height: auto;
            padding:5px;
            img {
                width: 70px;
            }
        }
    }
    .nav {
        margin-top: 20px;
        a, a:focus{
	        font-size:13px;
        }
    }
    #presented {
    width: 145px;
    float: left;
    margin:15px;
    	img {
	    	width:100%
    	}
    }
}


//  Header
header.big {
    text-align: center;
    h1 {
	    font-family: "web_homestead", Impact, Charcoal, sans-serif;
	    font-size: 100px;
	    margin: 50px 0 30px;
    }
    h2 {
	    margin:0 auto 30px;
	    max-width:860px;
    }
    h3 {
	    margin: 0 0 10px;
	    font-size: 32px;
      font-family: "Courier New",Courier,monospace;
    }
	h4 {
    font-family: "Courier New",Courier,monospace;
		margin:30px 0 50px;
	}	
}

// Sections

section {
    padding: 80px 25px 40px;
}
section[class$='-poly'] {
	padding: 50px 25px;
}

section.intro {
	background-color: $blue;
	color: #fff;
	a {
      color: #fff;
    }
}

section.intro [class*='col-']:first-child p {
	font-size:21px;
}

section.intro [class*='col-']:last-child p {
	font-size:14px;
	text-align: center
}

.section-heading {
    margin-top: 0;
}

section iframe {
	width:100%;
}

.paper {
  text-align: center;
  p {
    text-align: left;
  }
}

//Schedule
.session-card {
  border: 1px solid #d9d9d9;
  padding: 10px;
  min-height: 95px;
  margin-bottom: 10px;
  cursor: pointer;
  width: 99%;
  $borderleft: 3px solid;
  span {
    display: block;
    font-size: 12px;
    &.title {
      font-weight: bold;
      margin:10px 0;
    }
    &.clickmore {
      font-size: 10px;
    }

    &.abstract {
      display: none;
    }
  }
 
  &.General {
    clear: both;
  }
  
  &.BackEnd {
    border-left: $borderleft #64AA3D;
  }
  
  &.Creative {
    border-left: $borderleft #009E98;
  }
  
  &.DevOps {
    border-left: $borderleft #2E84C9;
  }
  
  &.FrontEnd {
    border-left: $borderleft #B90F5F;
  }
  
  &.FullStack {
    border-left: $borderleft #FFDA6B;
  }
  
  &.IoT {
    border-left: $borderleft #BFB7AD;
  }
  
  &.ProMan {
    border-left: $borderleft #FA7600;
  }
  
  &.ProDev {
    border-left: $borderleft #995924;
  }
  
  &.UX {
    border-left: $borderleft #762275;
  }

  
  @media (min-width: 992px)  {
    &.BackEnd, &.Creative, &.DevOps, &.FrontEnd, &.FullStack,, &.IoT, &.ProMan, &.ProDev, &.UX {
      width: 24%;
      float: left;
      margin-right: 1%;
    }

    &.open {
      width: 99%;
    }
  }
}


//Sponsors
.sponsor {
  border: 1px solid #ccc;
  width: 160px;
  height: 160px;
  text-align: center;
  position: relative;
  float: left;
  margin-left: -1px;
  margin-top: -1px;
  .rank{
    font-size: 9px;
    margin: 0;
    position: absolute;
    top: 5px;
    width: 100%;
  }
  .sponsor-img{
    width: 160px;
    height: 160px;
    margin: 0;
    padding: 20px;
    display: table-cell;
    vertical-align: middle;
  }
}

// Bootstrap Overrides
.text-primary {
    color: $theme-primary;
}

/*.no-gutter >*/[class*='col-'] {
    //padding-right:0;
    //padding-left:0;
    padding-bottom: 10px;
}

// Button Styles
.btn-default {
    @include button-variant($theme-dark, white, white);
}

.btn-primary {
    @include button-variant(white, $theme-primary, $theme-primary);
}

.btn {
    @include sans-serif-font;
    border: none;
    border-radius: 300px;
    font-weight: 700;
    text-transform: uppercase;
}

.btn-xl {
    padding: 15px 30px;
}

// Extras
// -- Highlight Color Customization
::-moz-selection {
    color: white;
    text-shadow: none;
    background: $theme-dark;
}

::selection {
    color: white;
    text-shadow: none;
    background: $theme-dark;
}

img::selection {
    color: white;
    background: transparent;
}

img::-moz-selection {
    color: white;
    background: transparent;
}

body {
    -webkit-tap-highlight-color: $theme-dark;
}

